--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "stats.js": "^0.17.0",
     "suspend-react": "^0.1.3",
     "three-mesh-bvh": "^0.7.0",
-    "three-stdlib": "^2.29.4",
+    "three-stdlib": "github:erer27/my-three-stdlib",
     "troika-three-text": "^0.49.0",
     "tunnel-rat": "^0.1.2",
     "utility-types": "^3.10.0",
@@ -135,7 +135,7 @@
     "semantic-release": "^21.0.6",
     "serve": "^14.2.0",
     "storybook": "^7.0.12",
-    "three": "^0.151.0",
+    "three": "github:erer27/my-three.js",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^4.3.6",
