--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "stats.js": "^0.17.0",
     "suspend-react": "^0.1.3",
     "three-mesh-bvh": "^0.7.0",
-    "three-stdlib": "https://github.com/erer27/three-stdlib.git",
+    "three-stdlib": "^2.29.4",
     "troika-three-text": "^0.49.0",
     "tunnel-rat": "^0.1.2",
     "utility-types": "^3.10.0",
